fix: fixed header css overlap bug

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -9,7 +9,7 @@
 }
 
 .login-form {
-  position: fixed;
+  position: absolute;
   right: 3rem;
   top: 2rem;
   height: 3rem;
